--- a/paper/cookbook.tex
+++ b/paper/cookbook.tex
@@ -56,17 +56,21 @@
 \maketitle
 
 \input{chapters/intro.tex}
-% \input{chapters/simple_derivatives.tex}
-% \input{chapters/statistics.tex}
-% \input{chapters/kronecker.tex}
-% \input{chapters/functions.tex}
-% \input{chapters/determinant.tex}
-% \input{chapters/advanced_derivatives.tex}
-% \input{chapters/special_matrices.tex}
-% \input{chapters/decompositions.tex}
-% \input{chapters/ml.tex}
+\input{chapters/simple_derivatives.tex}
+\input{chapters/statistics.tex}
+\input{chapters/kronecker.tex}
+\input{chapters/functions.tex}
+\input{chapters/determinant.tex}
+\input{chapters/advanced_derivatives.tex}
+\input{chapters/special_matrices.tex}
+\input{chapters/decompositions.tex}
+\input{chapters/ml.tex}
+\input{chapters/tensor_algos.tex}
 \input{chapters/tensorgrad.tex}
-\input{chapters/appendix.tex}
 
+\bibliographystyle{plain}
+\bibliography{references}
+
+\input{chapters/appendix.tex}
 
 \end{document}
