--- a/paper/references.bib
+++ b/paper/references.bib
@@ -12,3 +12,12 @@
   year={1853},
   publisher={Hodges and Smith}
 }
+
+@MISC {2993406,
+    TITLE = {Proving that ${\rm vec}(A\,{\rm Diag}(b)\,C) = ((C^T\otimes 1_a)\odot(1_c\otimes A))\,b$},
+    AUTHOR = {greg (https://math.stackexchange.com/users/357854/greg)},
+    HOWPUBLISHED = {Mathematics Stack Exchange},
+    NOTE = {URL:https://math.stackexchange.com/q/2993406 (version: 2018-11-11)},
+    EPRINT = {https://math.stackexchange.com/q/2993406},
+    URL = {https://math.stackexchange.com/q/2993406}
+}
