added section on tensor contraction orders

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -21,3 +21,292 @@
     EPRINT = {https://math.stackexchange.com/q/2993406},
     URL = {https://math.stackexchange.com/q/2993406}
 }
+
+@article{ordering_np_hard,
+    title={On optimizing a class of multi-dimensional loops with reduction for parallel execution},
+    author={Chi-Chung, Lam and Sadayappan, P and Wenger, Rephael},
+    journal={Parallel Processing Letters},
+    volume={7},
+    number={02},
+    pages={157--168},
+    year={1997},
+    publisher={World Scientific}
+}
+
+@Article{ordering_exact_algo,
+    author  = {Pfeifer, Robert N. C. and Haegeman, Jutho and Verstraete, Frank},
+    journal = {Phys. Rev. E},
+    title   = {Faster identification of optimal contraction sequences for tensor networks},
+    year    = {2014},
+    pages   = {033315},
+    volume  = {90},
+    doi     = {10.1103/PhysRevE.90.033315},
+}
+
+% TODO: Update with SIGMOD entry.
+@misc{dpconv,
+    title={DPconv: Super-Polynomially Faster Join Ordering}, 
+    author={Mihail Stoian and Andreas Kipf},
+    year={2024},
+    eprint={2409.08013},
+    archivePrefix={arXiv},
+    primaryClass={cs.DB},
+    url={https://arxiv.org/abs/2409.08013}, 
+}
+
+@inproceedings{kahypar,
+    title={K-way hypergraph partitioning via n-level recursive bisection},
+    author={Schlag, Sebastian and Henne, Vitali and Heuer, Tobias and Meyerhenke, Henning and Sanders, Peter and Schulz, Christian},
+    booktitle={2016 Proceedings of the Eighteenth Workshop on Algorithm Engineering and Experiments (ALENEX)},
+    pages={53--67},
+    year={2016},
+    organization={SIAM}
+}
+
+@article{dudek_tree_decomp,
+  title={Efficient contraction of large tensor networks for weighted model counting through graph decompositions},
+  author={Dudek, Jeffrey M and Duenas-Osorio, Leonardo and Vardi, Moshe Y},
+  journal={arXiv preprint arXiv:1908.04381},
+  year={2019}
+}
+
+@article{roman_tree_decomp,
+    title = {Adaptive algorithm for quantum circuit simulation},
+    author = {Schutski, Roman and Lykov, Danil and Oseledets, Ivan},
+    journal = {Phys. Rev. A},
+    volume = {101},
+    issue = {4},
+    pages = {042335},
+    numpages = {9},
+    year = {2020},
+    month = {Apr},
+    publisher = {American Physical Society},
+    doi = {10.1103/PhysRevA.101.042335},
+    url = {https://link.aps.org/doi/10.1103/PhysRevA.101.042335}
+}
+
+@article{markov_shi,
+    title={Simulating quantum computation by contracting tensor networks},
+    author={Markov, Igor L and Shi, Yaoyun},
+    journal={SIAM Journal on Computing},
+    volume={38},
+    number={3},
+    pages={963--981},
+    year={2008},
+    publisher={SIAM}
+}
+
+@article{treewidth_approx,
+    title={A single-exponential time 2-approximation algorithm for treewidth},
+    author={Korhonen, Tuukka},
+    journal={SIAM Journal on Computing},
+    number={0},
+    pages={FOCS21--174},
+    year={2023},
+    publisher={SIAM}
+}
+
+@Book{cormen,
+    author    = {Cormen, Thomas H. and Leiserson, Charles E. and Rivest, Ronald L. and Stein, Clifford},
+    publisher = {The MIT Press},
+    title     = {Introduction to Algorithms, Third Edition},
+    year      = {2009},
+    edition   = {3rd},
+    isbn      = {0262033844},
+    nolink={}
+}
+
+@article{mc_nlogn_1,
+    author       = {T. C. Hu and
+                  M. T. Shing},
+    title        = {Computation of Matrix Chain Products. Part {I}},
+    journal      = {{SIAM} J. Comput.},
+    volume       = {11},
+    number       = {2},
+    pages        = {362--373},
+    year         = {1982},
+    url          = {https://doi.org/10.1137/0211028},
+    doi          = {10.1137/0211028},
+    timestamp    = {Wed, 14 Nov 2018 10:45:07 +0100},
+    biburl       = {https://dblp.org/rec/journals/siamcomp/HuS82.bib},
+    bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{mc_nlogn_2,
+    author       = {T. C. Hu and
+                  M. T. Shing},
+    title        = {Computation of Matrix Chain Products. Part {II}},
+    journal      = {{SIAM} J. Comput.},
+    volume       = {13},
+    number       = {2},
+    pages        = {228--251},
+    year         = {1984},
+    url          = {https://doi.org/10.1137/0213017},
+    doi          = {10.1137/0213017},
+    timestamp    = {Wed, 14 Nov 2018 10:45:05 +0100},
+    biburl       = {https://dblp.org/rec/journals/siamcomp/HuS84.bib},
+    bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{mc_yao,
+    author       = {F. Frances Yao},
+    editor       = {Raymond E. Miller and
+                  Seymour Ginsburg and
+                  Walter A. Burkhard and
+                  Richard J. Lipton},
+    title        = {Efficient Dynamic Programming Using Quadrangle Inequalities},
+    booktitle    = {Proceedings of the 12th Annual {ACM} Symposium on Theory of Computing,
+                  April 28-30, 1980, Los Angeles, California, {USA}},
+    pages        = {429--435},
+    publisher    = {{ACM}},
+    year         = {1980},
+    url          = {https://doi.org/10.1145/800141.804691},
+    doi          = {10.1145/800141.804691},
+    timestamp    = {Tue, 06 Nov 2018 11:07:05 +0100},
+    biburl       = {https://dblp.org/rec/conf/stoc/Yao80.bib},
+    bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{ttn_cost,
+    author = {Stoian, Mihail and Milbradt, Richard M. and Mendl, Christian B.},
+    title = {On the Optimal Linear Contraction Order of Tree Tensor Networks, and Beyond},
+    journal = {SIAM Journal on Scientific Computing},
+    volume = {46},
+    number = {5},
+    pages = {B647-B668},
+    year = {2024},
+    doi = {10.1137/23M161286X},
+    URL = {https://doi.org/10.1137/23M161286X}
+}
+
+@Article{ttn_size,
+    author  = {Xu, Jianyu and Liang, Ling and Deng, Lei and Wen, Changyun and Xie, Yuan and Li, Guoqi},
+    journal = {Phys. Rev. E},
+    title   = {Towards a polynomial algorithm for optimal contraction sequence of tensor networks from trees},
+    year    = {2019},
+    pages   = {043309},
+    volume  = {100},
+    doi     = {10.1103/PhysRevE.100.043309},
+}
+
+@Article{cotengra,
+    author  = {Gray, Johnnie and Kourtis, Stefanos},
+    journal = {Quantum},
+    title   = {Hyper-optimized tensor network contraction},
+    year    = {2021},
+    pages   = {410},
+    volume  = {5},
+    doi     = {10.22331/q-2021-03-15-410},
+}
+
+@Article{opt_einsum,
+    author  = {Smith, Daniel G. A. and Gray, Johnnie},
+    journal = {Journal of Open Source Software},
+    title   = {opt\_einsum - A {P}ython package for optimizing contraction order for einsum-like expressions},
+    year    = {2018},
+    number  = {26},
+    pages   = {753},
+    volume  = {3},
+    doi     = {10.21105/joss.00753},
+}
+
+@article{einsum_as_sql,
+    author       = {Mark Blacher and
+                  Julien Klaus and
+                  Christoph Staudt and
+                  S{\"{o}}ren Laue and
+                  Viktor Leis and
+                  Joachim Giesen},
+    title        = {Efficient and Portable Einstein Summation in {SQL}},
+    journal      = {Proc. {ACM} Manag. Data},
+    volume       = {1},
+    number       = {2},
+    pages        = {121:1--121:19},
+    year         = {2023},
+    url          = {https://doi.org/10.1145/3589266},
+    doi          = {10.1145/3589266},
+    timestamp    = {Fri, 07 Jul 2023 23:32:33 +0200},
+    biburl       = {https://dblp.org/rec/journals/pacmmod/BlacherKSLLG23.bib},
+    bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{quick_bb,
+    author       = {Vibhav Gogate and
+                  Rina Dechter},
+    editor       = {David Maxwell Chickering and
+                  Joseph Y. Halpern},
+    title        = {A Complete Anytime Algorithm for Treewidth},
+    booktitle    = {{UAI} '04, Proceedings of the 20th Conference in Uncertainty in Artificial
+                  Intelligence, Banff, Canada, July 7-11, 2004},
+    pages        = {201--208},
+    publisher    = {{AUAI} Press},
+    year         = {2004},
+    url          = {https://dslpitt.org/uai/displayArticleDetails.jsp?mmnu=1\&smnu=2\&article\_id=1109\&proceeding\_id=20},
+    timestamp    = {Wed, 03 Feb 2021 11:09:07 +0100},
+    biburl       = {https://dblp.org/rec/conf/uai/GogateD04.bib},
+    bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{flow_cutter_2,
+    title={Graph bisection with pareto optimization},
+    author={Hamann, Michael and Strasser, Ben},
+    journal={Journal of Experimental Algorithmics (JEA)},
+    volume={23},
+    pages={1--34},
+    year={2018},
+    publisher={ACM New York, NY, USA}
+}
+
+@article{flow_cutter_1,
+    author       = {Ben Strasser},
+    title        = {Computing Tree Decompositions with FlowCutter: {PACE} 2017 Submission},
+    journal      = {CoRR},
+    volume       = {abs/1709.08949},
+    year         = {2017},
+    url          = {http://arxiv.org/abs/1709.08949},
+    eprinttype    = {arXiv},
+    eprint       = {1709.08949},
+    timestamp    = {Mon, 13 Aug 2018 16:46:42 +0200},
+    biburl       = {https://dblp.org/rec/journals/corr/abs-1709-08949.bib},
+    bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{meirom_tn_rl,
+    title={Optimizing tensor network contraction using reinforcement learning},
+    author={Meirom, Eli and Maron, Haggai and Mannor, Shie and Chechik, Gal},
+    booktitle={International Conference on Machine Learning},
+    pages={15278--15292},
+    year={2022},
+    organization={PMLR}
+}
+
+@inproceedings{jena_tn_cut,
+    author       = {Christoph Staudt and
+                  Mark Blacher and
+                  Julien Klaus and
+                  Farin Lippmann and
+                  Joachim Giesen},
+    editor       = {Leo Liberti},
+    title        = {Improved Cut Strategy for Tensor Network Contraction Orders},
+    booktitle    = {22nd International Symposium on Experimental Algorithms, {SEA} 2024,
+                  July 23-26, 2024, Vienna, Austria},
+    series       = {LIPIcs},
+    volume       = {301},
+    pages        = {27:1--27:19},
+    publisher    = {Schloss Dagstuhl - Leibniz-Zentrum f{\"{u}}r Informatik},
+    year         = {2024},
+    url          = {https://doi.org/10.4230/LIPIcs.SEA.2024.27},
+    doi          = {10.4230/LIPICS.SEA.2024.27},
+    timestamp    = {Wed, 21 Aug 2024 22:46:00 +0200},
+    biburl       = {https://dblp.org/rec/conf/wea/StaudtBKLG24.bib},
+    bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{hyper,
+    title={HyPer: A hybrid OLTP\&OLAP main memory database system based on virtual memory snapshots},
+    author={Kemper, Alfons and Neumann, Thomas},
+    booktitle={2011 IEEE 27th International Conference on Data Engineering},
+    pages={195--206},
+    year={2011},
+    organization={IEEE}
+}
