extended stats sections

--- a/paper/cookbook.tex
+++ b/paper/cookbook.tex
@@ -91,10 +91,10 @@
 \maketitle
 
 %\input{chapters/intro.tex}
-%\input{chapters/simple_derivatives.tex}
+\input{chapters/simple_derivatives.tex}
 %\input{chapters/kronecker.tex}
 \input{chapters/functions.tex}
-\input{chapters/statistics.tex}
+%\input{chapters/statistics.tex}
 
 %\input{chapters/determinant.tex}
 %\input{chapters/advanced_derivatives.tex}
