--- a/paper/cookbook.tex
+++ b/paper/cookbook.tex
@@ -14,6 +14,7 @@
 \usepackage{changepage} % for adjustwidth
 \usepackage{listings}
 \usepackage{xcolor}
+\usepackage{makecell}
 
 \usepackage{geometry}
 \geometry{hmargin=4cm,vmargin=4cm}
@@ -74,6 +75,8 @@
 \newcommand{\smat}[1]{\left[\begin{smallmatrix}#1\end{smallmatrix}\right]}
 \newcommand{\svec}[1]{[\begin{smallmatrix}#1\end{smallmatrix}]}
 \newcommand{\E}{\mathrm{E}}
+\newcommand{\Tr}{\mathrm{Tr}}
+\newcommand{\diag}{\mathrm{diag}}
 \newcommand\sbullet[1][1.5pt]{%
   \tikz[baseline=-0.5ex]\draw (0,0) circle (#1);%
 }
