updated special matrices section

--- a/paper/cookbook.tex
+++ b/paper/cookbook.tex
@@ -94,18 +94,18 @@
 \maketitle
 
 \input{chapters/intro.tex}
-\input{chapters/simple_derivatives.tex}
-\input{chapters/kronecker.tex}
-\input{chapters/functions.tex}
-\input{chapters/statistics.tex}
+%\input{chapters/simple_derivatives.tex}
+%\input{chapters/kronecker.tex}
+%\input{chapters/functions.tex}
+%\input{chapters/statistics.tex}
 
-\input{chapters/determinant.tex}
-\input{chapters/advanced_derivatives.tex}
+% \input{chapters/determinant.tex}
+% \input{chapters/advanced_derivatives.tex}
 \input{chapters/special_matrices.tex}
-\input{chapters/decompositions.tex}
-\input{chapters/ml.tex}
-\input{chapters/tensor_algos.tex}
-\input{chapters/tensorgrad.tex}
+% \input{chapters/decompositions.tex}
+% \input{chapters/ml.tex}
+% \input{chapters/tensor_algos.tex}
+% \input{chapters/tensorgrad.tex}
 
 \bibliographystyle{plain}
 \bibliography{references}
