Added concatenation and direct sum

--- a/paper/cookbook.tex
+++ b/paper/cookbook.tex
@@ -97,11 +97,11 @@
 %\input{chapters/simple_derivatives.tex}
 %\input{chapters/kronecker.tex}
 %\input{chapters/functions.tex}
-%\input{chapters/statistics.tex}
+\input{chapters/statistics.tex}
 
 % \input{chapters/determinant.tex}
 % \input{chapters/advanced_derivatives.tex}
-\input{chapters/special_matrices.tex}
+%\input{chapters/special_matrices.tex}
 % \input{chapters/decompositions.tex}
 % \input{chapters/ml.tex}
 % \input{chapters/tensor_algos.tex}
